develop index front end

--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -6,12 +6,14 @@
 
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-    <title>Le blog de Béa</title>
+    <title>Les mots et l'émoi</title>
 </head>
-<body>
+<body style="background-image:url({% static 'books/images/library.jpg' %});">
 
 <div class="header">
-    <h2>Le blog de Béa</h2>
+    <h2>LES MOTS ET L`ÉMOI</h2>
+    <h3>===== Blog littéraire =====</h3>
+    <h4>Béatrice Arvet</h4>
 </div>
 
 {% block content_core %}{% endblock %}
@@ -20,5 +22,5 @@
     <h2> Footer.</h2>
 </div>
 
-</body>
+</bodyi>
 </html>
