--- a/books/static/books/style.css
+++ b/books/static/books/style.css
@@ -6,10 +6,13 @@ body {
 
 /* Header/Blog Title */
 .header {
-  padding: 30px;
-  font-size: 40px;
+  padding: 10px;
   text-align: center;
-  background: white;
+  margin: auto;
+  background: #8533ff;
+  width: 400px;
+  font-size: 20px;
+  color: white;
 }
 
 /* Create two unequal columns that floats next to each other */
@@ -29,6 +32,31 @@ body {
   padding-left: 20px;
 }
 
+.rightbook {
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;         /* Opera/IE 8+ */
+  max-width:50%;
+  float: right;
+  text-align: left;
+  padding-left: 15px;
+  color: #000000;
+}
+.leftbook {
+  width:50%;
+  height:200px;
+  float: left;
+  background-repeat: no-repeat;
+  /*background-attachment: fixed;*/
+  background-size: 100% 100%;
+  text-align: center;
+  color: #000000;
+}
+
+img.b_img {
+  max-width:100%;
+}
+
 /* Fake image */
 .fakeimg {
   background-color: #aaa;
@@ -38,6 +66,14 @@ body {
 
 /* Add a card effect for articles */
 .card {
+  height: 200px;
+  background-color: white;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+/* Add a card effect for right column articles */
+.rcard {
   background-color: white;
   padding: 20px;
   margin-top: 20px;
