--- a/books/templates/books/index.html
+++ b/books/templates/books/index.html
@@ -1,7 +1,11 @@
 {% extends "books/base.html" %}
 
 {% block content_core %}
-
+<div class="maintitle">
+  <h2>LES MOTS ET L`ÉMOI</h2>
+  <h3>===== Blog littéraire =====</h3>
+  <h4>Béatrice Arvet</h4>
+</div>
 <div class="row">
   <div class="leftcolumn">
 {% for article in latest_articles_list %}
